- sql.m checks for 'typedBLOBs' mode before testing tailing struct arguments now.
- Bugfix: Crash, if mksqlite is called to set flags (i.e. 'streaming') with an empty argument
- Added option 'dont_free_functors'.
  Due to a MATLAB bug: MATLAB crashes under some circumstances when freeing a persistent handle 
  that was created in an object derived from 'handle'. (Issue reported)
  
Version 2.3 (build 118 - 3. Jun. 2016)
- Implementations of sqlites application-defined functions for MATLAB functions
- Bugfix: Scalar MATLAB logical arrays were read flawy
- SQLite update to 3.13.0

Version 2.2  (build 110 - 18. Apr. 2016)
- Bugfix: Database filename/path with umlauts could not be opened.
- Bugfix in sql.m: [+#] key evaluation deleted 1 char too much.
- mksqlite handles named binding with struct argument.
- SQLite update to 3.10.2.
- Updated buildit.m for mac users.

Version 2.1  (build 98 - 28. Aug. 2015)
- Bugfix: Not all SQLite errors were caught and passed to the user (kv69).
- Bugfix: When using SELECT statements with param_wrapping is on, only
  the last result was returned (kv69).
- Returning rowid on queries as 4th parameter (even when using parameter wrapping).
- sql.m handles struct parameter for parameter binding (kv69).
- DEELX update to 1.3
- SQLite update to 3.8.11.1
* (Thanks to Knut Voigtlaender (kv69) for supporting)

Version 2.0  (build 92 - 04. Feb. 2015)
- Structural cleanup of "one file source" to "multiple file sources"
- Added support for parameter wrapping
  mksqlite('param_wrapping', 0|1)
  (Default is off)
- Added support for different results types for table queries:
  0: array of structs (default)
  1: struct of arrays
  2: cell matrix
  mksqlite('result_type', 0|1|2)
- mksqlite returns row count and column names for table queries now
  [result,rowcount,colnames] = mksqlite('SELECT...')
- Source documentation with doxygen
- python filter function for doxygen (python must be installed)
- Added new sql user math functions (lg, ln, exp)